--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -42,6 +42,7 @@ required = [
   "github.com/davecgh/go-spew/spew",
   "github.com/golang/lint/golint",
   "github.com/fzipp/gocyclo",
+  "github.com/haya14busa/goverage",
   "github.com/pilu/fresh", # used to rebuild if source changed while running
 ]
 
