Add postgresql support (#3)
* Add postgresql support

Add migrations and migrations_test from the fabric8-auth/tenant repository.

Add makefile target to spinup a postgres docker container before the make
dev. No fancy docker-compose/kedge or others but straight with docker.

There is maybe some other stuff to figure out when adding proper schemas.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -41,6 +41,7 @@ required = [
   "github.com/goadesign/goa/goatest",
   "github.com/davecgh/go-spew/spew",
   "github.com/haya14busa/goverage",
+  "github.com/jteeuwen/go-bindata/go-bindata",
   "github.com/pilu/fresh", # used to rebuild if source changed while running
 ]
 
