--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -49,12 +49,7 @@ ignored = [
   "github.com/fabric8-services/fabric8-build-service/app",
 ]
 
-
-[prune]
-  go-tests = true
-  unused-packages = true
-
 [[constraint]]
   name = "github.com/fabric8-services/fabric8-common"
-  source = "https://github.com/xcoulon/fabric8-common.git"
-  revision = "fc46960"
+  source = "https://github.com/fabric8-services/fabric8-common.git"
+  branch = "master"
