Set viper config to our own, or this will crash (#19)
* Set viper config to our own, or this will crash

See https://github.com/fabric8-services/fabric8-common/pull/22

* Fix #18 binary not running,

Binary was not running due of bad usage of composition between common
class. After chatting with the -common people, it seems that configuration from
common is getting removed, so let's instead use our own and only pickup the
stuff we need to run the service + db.

* Fix golangci errors

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -50,11 +50,10 @@ ignored = [
   "github.com/fabric8-services/fabric8-build-service/app",
 ]
 
-[[constraint]]
-  name = "github.com/fabric8-services/fabric8-common"
-  source = "https://github.com/fabric8-services/fabric8-common.git"
-  branch = "master"
-
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.2.1"
