--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,26 @@
 #------------------------
+# HTTP configuration
+#------------------------
+
+http.address: 0.0.0.0:8080
+
+#------------------------
+# Misc.
+#------------------------
+
+# Enable development related features, e.g. token generation endpoint
+developer.mode.enabled: false
+log.level: info
+log.json: true
+
+# Metric and diganostics
+diagnose.http.address: ""
+metrics.http.address: ""
+
+# Auth
+auth.url: ""
+
+#------------------------
 # Postgres configuration
 #------------------------
 
@@ -16,44 +38,3 @@ postgres.connection.maxidle: -1
 postgres.connection.maxopen: -1
 # Timeout for a transaction in minutes
 postgres.transaction.timeout: 5m
-
-#------------------------
-# HTTP configuration
-#------------------------
-
-http.address: 0.0.0.0:8080
-#header.maxlength: 10240 # bytes
-
-#------------------------
-# HTTP Cache-Control
-#------------------------
-
-cachecontrol.workitems: max-age=2
-cachecontrol.workitemtypes: max-age=2
-cachecontrol.workitemlinks: max-age=2
-cachecontrol.workitemlinktypes: max-age=2
-cachecontrol.spaces: max-age=2
-cachecontrol.spacetemplates: max-age=2
-cachecontrol.iterations: max-age=2
-cachecontrol.areas: max-age=2
-cachecontrol.users: max-age=2
-cachecontrol.collaborators: max-age=2
-cachecontrol.comments: max-age=2
-cachecontrol.filters: max-age=86400 # 1 day
-# data returned from '/api/user' must not be cached by intermediate proxies,
-# but can only be kept in the client's local cache.
-cachecontrol.user: private,max-age=2
-
-#------------------------
-# Misc.
-#------------------------
-
-# Enable development related features, e.g. token generation endpoint
-developer.mode.enabled: false
-log.level: info
-
-# Amount of seconds until the deployments connections timeout
-deployments.http.timeout: 30
-
-# Whether you want to create the common work item types such as bug, feature, ...
-populate.commontypes: true
