--- a/.make/Makefile.win
+++ b/.make/Makefile.win
@@ -1,4 +1,4 @@
-BINARY_SERVER_BIN=$(INSTALL_PREFIX)/fabric8-build-service.exe
+BINARY_SERVER_BIN=$(INSTALL_PREFIX)/fabric8-build.exe
 GOAGEN_BIN=$(VENDOR_DIR)/github.com/goadesign/goa/goagen/goagen.exe
 GO_BINDATA_DIR=$(VENDOR_DIR)/github.com/jteeuwen/go-bindata/go-bindata/
 GO_BINDATA_BIN=$(GO_BINDATA_DIR)/go-bindata.exe
