--- a/.make/Makefile.lnx
+++ b/.make/Makefile.lnx
@@ -2,7 +2,7 @@ BINARY_SERVER_BIN=$(INSTALL_PREFIX)/fabric8-build
 GOAGEN_BIN=$(VENDOR_DIR)/github.com/goadesign/goa/goagen/goagen
 GO_BINDATA_DIR=$(VENDOR_DIR)/github.com/jteeuwen/go-bindata/go-bindata/
 GO_BINDATA_BIN=$(GO_BINDATA_DIR)/go-bindata
-FRESH_BIN=$(VENDOR_DIR)/github.com/pilu/fresh/fresh
+FRESH_BIN=$(VENDOR_DIR)/github.com/chmouel/fresh/fresh
 EXTRA_PATH=$(shell dirname $(GO_BINDATA_BIN))
 GOCOV_BIN=$(VENDOR_DIR)/github.com/axw/gocov/gocov/gocov
 GOCOVMERGE_BIN=$(VENDOR_DIR)/github.com/wadey/gocovmerge/gocovmerge
