--- a/.make/Makefile.win
+++ b/.make/Makefile.win
@@ -3,7 +3,7 @@ GOAGEN_BIN=$(VENDOR_DIR)/github.com/goadesign/goa/goagen/goagen.exe
 GO_BINDATA_DIR=$(VENDOR_DIR)/github.com/jteeuwen/go-bindata/go-bindata/
 GO_BINDATA_BIN=$(GO_BINDATA_DIR)/go-bindata.exe
 EXTRA_PATH=$(shell cygpath --unix '$(GO_BINDATA_DIR)')
-FRESH_BIN=$(VENDOR_DIR)/github.com/pilu/fresh/fresh.exe
+FRESH_BIN=$(VENDOR_DIR)/github.com/chmouel/fresh/fresh.exe
 GOCOV_BIN=$(VENDOR_DIR)/github.com/axw/gocov/gocov/gocov.exe
 GOCOVMERGE_BIN=$(VENDOR_DIR)/github.com/wadey/gocovmerge/gocovmerge.exe
 GOLINT_DIR=$(VENDOR_DIR)/github.com/golang/lint/golint
