Fix dockerfile for rhel images and add promotheus wrapper script
Sync from fabric8-env dockerfiiles + change of paths.

This closes openshiftio/openshift.io#4522 and closes #61

--- a/.make/Dockerfile
+++ b/.make/Dockerfile
@@ -1,18 +1,29 @@
-# -----------------------------------------------------------------
-# Docker file to copy the generated binary from the `out` directory
-# -----------------------------------------------------------------
 FROM centos:7
-LABEL maintainer Devtools <devtools@redhat.com>
-LABEL author Devtools <devtools@redhat.com>
-EXPOSE 8080
+LABEL maintainer "Devtools <devtools@redhat.com>"
+LABEL author "Devtools <devtools@redhat.com>"
+ENV LANG=en_US.utf8
+ENV F8_INSTALL_PREFIX=/usr/local/build
 
-ARG BUILD_DIR
-ARG PROJECT_NAME
-COPY ${BUILD_DIR}/${PROJECT_NAME} /usr/local/bin/${PROJECT_NAME}
-
-ENV F8_USER_NAME=fabric8
+# Create a non-root user and a group with the same name: "build"
+ENV F8_USER_NAME=build
 RUN useradd --no-create-home -s /bin/bash ${F8_USER_NAME}
+
+# Install little pcp pmcd server for metrics collection
+# would prefer only pmcd, and not the /bin/pm*tools etc.
+COPY .make/pcp/pcp.repo /etc/yum.repos.d/pcp.repo
+RUN yum install -y pcp pcp-pmda-prometheus && yum clean all && \
+    mkdir -p /etc/pcp /var/run/pcp /var/lib/pcp /var/log/pcp  && \
+    chgrp -R root /etc/pcp /var/run/pcp /var/lib/pcp /var/log/pcp && \
+    chmod -R g+rwX /etc/pcp /var/run/pcp /var/lib/pcp /var/log/pcp
+COPY .make/pcp/fabric8-build+pmcd.sh /fabric8-build+pmcd.sh
+EXPOSE 44321
+
+COPY bin/fabric8-build ${F8_INSTALL_PREFIX}/bin/fabric8-build
+
 # From here onwards, any RUN, CMD, or ENTRYPOINT will be run under the following user
 USER ${F8_USER_NAME}
 
-ENTRYPOINT [ "/usr/local/bin/fabric8-build" ]
+WORKDIR ${F8_INSTALL_PREFIX}
+ENTRYPOINT [ "/fabric8-build+pmcd.sh" ]
+
+EXPOSE 8080
