--- a/.make/Dockerfile.rhel
+++ b/.make/Dockerfile.rhel
@@ -6,7 +6,6 @@ LABEL maintainer "Devtools <devtools@redhat.com>"
 LABEL author "Devtools <devtools@redhat.com>"
 
 ENV LANG=en_US.utf8
-ENV F8_INSTALL_PREFIX=/usr/local/build
 
 # Create a non-root user and a group with the same name: "build"
 ENV F8_USER_NAME=build
@@ -16,11 +15,11 @@ RUN useradd --no-create-home -s /bin/bash ${F8_USER_NAME}
 COPY .make/pcp/fabric8-build+pmcd.sh /fabric8-build+pmcd.sh
 EXPOSE 44321
 
-COPY bin/fabric8-build ${F8_INSTALL_PREFIX}/bin/fabric8-build
+COPY bin/fabric8-build /bin/fabric8-build
 
 USER ${F8_USER_NAME}
 
-WORKDIR ${F8_INSTALL_PREFIX}
+WORKDIR /
 ENTRYPOINT [ "/fabric8-build+pmcd.sh" ]
 
 EXPOSE 8080
