--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,6 +34,7 @@ required = [
   "github.com/goadesign/goa/encoding/form",
   "github.com/goadesign/goa/goagen",
   "github.com/goadesign/goa/goagen/codegen",
+  "github.com/fabric8-services/fabric8-env/design",
   "github.com/goadesign/goa/goagen/gen_app",
   "github.com/goadesign/goa/goagen/gen_controller",
   "github.com/goadesign/goa/goagen/gen_swagger",
@@ -66,3 +67,7 @@ ignored = [
 [[constraint]]
   name = "github.com/fabric8-services/fabric8-wit"
   revision = "b59d0dc8ae9b2bfea1fb5dc6ff3552c42b735756"
+
+[[constraint]]
+  name = "github.com/fabric8-services/fabric8-env"
+  revision = "f81e3120df92f20cca3c06d98d03e2e83cd15862"
