--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -59,6 +59,9 @@ ignored = [
   name = "github.com/stretchr/testify"
   version = "1.2.1"
 
+[[constraint]]
+  name = "gopkg.in/h2non/gock.v1"
+  revision = "master"
 
 [[constraint]]
   name = "github.com/fabric8-services/fabric8-wit"
